# chess-vision-trainer

./: Cargo.toml  README.md
src/: board.rs  color.rs  evaluation.rs  game.rs  main.rs  trainer.rs
