[package]
name = "chess-vision-trainer"
version = "0.1.0"
authors = ["Chris Dugan <c.m.s.dugan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
pleco = "0.5.0"
rand = "0.7.3"
regex = "1"
text_io = "0.1.8"